# ped0

data_collection/bot/: README.md  init.sql  pyproject.toml
data_collection/bot/bot/: __init__.py
omegalul/: README.md  makefile  pyproject.toml
omegalul/examples/: client.py
omegalul/omegalul/: __init__.py  api.py  chat.py  factory.py  randid.py  server.py  session.py
omegalul/tests/: test_omegalul.py
